Swap MIDI file URLs for right and left channels

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ const logEl = document.getElementById("log");
 const log = (m) => { logEl.textContent += (logEl.textContent ? "\n" : "") + m; };
 
 // ==================== CONFIG MIDI/HÁPTICA ====================
-const MIDI_RIGHT_URL = "./dream147.mid";
-const MIDI_LEFT_URL  = "./dream14iz.mid";
+const MIDI_RIGHT_URL = "./dream14iz.mid";
+const MIDI_LEFT_URL  = "./dream147.mid";
 
 const MIDI_OFFSET_RIGHT = 3.4;
 const MIDI_OFFSET_LEFT  = 3.4;
